configured the deployment to gh-pages

--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "star-company-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://Aleksandr-Bondarenko.github.io/star-company-app",
   "dependencies": {
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1"
@@ -10,6 +12,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
